[package]
name = "gh-utils-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
futures = "0.3.30"
git2 = "0.19.0"
google-cloud-auth = "0.16.0"
google-cloud-storage = "0.20.0"
google-cloud-token = "0.1.2"
octocrab = "0.39.0"
parquet = "52.2.0"
regex = "1.5.4"
tokio = { version = "1.39.3", features = ["full"] }
walkdir = "2.5.0"
