[package]
name = "gh-utils-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
futures = "0.3.30"
google-cloud-auth = "0.16.0"
google-cloud-storage = "0.20.0"
google-cloud-token = "0.1.2"
regex = "1.5.4"
tokio = { version = "1.39.3", features = ["full"] }
arrow = "52.2.0"
parquet = { version = "52.2.0", features = ["arrow"] }
