[package]
name = "gh-utils-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
futures = { version = "0.3.30", features = ["executor"] }
regex = "1.5.4"
tokio = { version = "1.39.3", features = ["full"] }
arrow = { version = "52.2.0", features = ["prettyprint"] }
parquet = { version = "52.2.0", features = ["arrow", "async"] }
bytes = "1.4.0"
object_store = { version = "0.11.0", features = ["gcp"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.8.0"
git2 = "0.17"
walkdir = "2.3"
